syntax = "proto3";

// output
option go_package = "pkg/grpc";

// package-name
package gRPC_Server;

// Services
service GreetingService {
  rpc Hello (HelloRequest) returns (HelloResponse);
}

// Request
message HelloRequest {
  string name = 1;
}

// Response
message HelloResponse {
  string message = 1;
}